@startuml DB_schema
title Диаграмма БД

skinparam linetype ortho
skinparam roundcorner 15
skinparam shadowing false

' Таблицы
entity "User" as User {
  * user_id : INT
  * created_at : TIMESTAMP
  * email : VARCHAR(255) <<UNIQUE>>
  * password_hash : VARCHAR(255)
  * full_name : VARCHAR(100)
}

entity "UserInterest" as UserInterest {
  * interest_id : INT
  * user_id : INT
  * interest_name : VARCHAR(50) <<UNIQUE>>
  * preference_weight : FLOAT
  * preference_difficulty : INT
}

entity "Post" as Post {
  * post_id : SERIAL
  * user_id : INT <<nullable>>  # Для постов, созданных автоматически
  * title : VARCHAR(200)
  * content : TEXT
  * generated_by_gpt : BOOLEAN
  * created_at : TIMESTAMP
  * status : VARCHAR(20) <<enum: draft,published,archived>>
}

entity "PostReaction" as PostReaction {
  * reaction_id : SERIAL
  * user_id : INT
  * post_id : INT
  * reaction_type : VARCHAR(10) <<enum: like,dislike>>
  * created_at : TIMESTAMP
}

entity "GPTRequest" as GPTRequest {
  * request_id : SERIAL
  * user_id : INT
  * *post_id : INT <<nullable>>  # Связь с сгенерированным постом
  * gpt_response : TEXT
  * prompt : TEXT
  * created_at : TIMESTAMP
}

' Связи
User ||--o{ UserInterest : "has interests"
Interest ||--o{ UserInterest : "belongs to"

User ||..o{ Post : "creates (optional)"
Post ||--o{ GPTRequest : "generated from"

Post ||--o{ PostReaction : "receives"
User ||--o{ PostReaction : "makes"

@enduml